@@ -15,6 +15,7 @@ BUGFIX:
 GENERAL:
 * class PanAPIConnector | introduce method commitAll() and commitPartial( $user)
 * framework | split README into multiple files to get better introduction
+* framework | introduce new example - improve the example template
 
 
 2.0.29 (20220204)
